Fixed bug #30994 (SOAP server unable to handle request with references).